--- a/VC_final_ex/VC_final_ex.vcxproj
+++ b/VC_final_ex/VC_final_ex.vcxproj
@@ -128,11 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="map.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VC_final_ex.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="map.cpp" />
     <ClCompile Include="VC_final_ex.cpp" />
   </ItemGroup>
   <ItemGroup>
