--- a/VC_final_ex/VC_final_ex.vcxproj
+++ b/VC_final_ex/VC_final_ex.vcxproj
@@ -129,12 +129,14 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="map.h" />
+    <ClInclude Include="object.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VC_final_ex.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="map.cpp" />
+    <ClCompile Include="object.cpp" />
     <ClCompile Include="VC_final_ex.cpp" />
   </ItemGroup>
   <ItemGroup>
